--- a/index.html
+++ b/index.html
@@ -19,7 +19,55 @@
             <li><a href="mailto:info@devstudio.com" target="_blank" rel="noopener noreferrer">info@devstudio.com</a></li>
             <li><a href="tel:+11(000)111-11-11" target="_blank" rel="noopener noreferrer">+11(000)111-11-11</a></li>
         </ul>
+        <h1>Effective Solutions for Your Business</h1>
+        <button>Order Service</button>
     </header>
-    
+    <main>
+        <ul>
+            <li>
+        <h2>Strategy</h2>
+        <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+            </li>
+            <li>
+        <h2>Punctuality</h2>
+        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            </li>
+            <li>
+        <h2>Diligence</h2>
+        <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            </li>
+            <li>
+        <h2>Technologies</h2>
+        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            </li>
+        </ul>
+        <ul>
+            <li>
+        <h2>Our Team</h2>
+        <img src="img.jpg" alt="picture" width="264" height="260">
+        <h3>Mark Guerrero</h3>
+        <p>Product Designer</p>
+        </li>
+        <li>
+         <img src="img (1).jpg" alt="picture" width="264" height="260">
+         <h3>Tom Ford</h3>
+         <p>Frontend Developer</p>
+        </li>
+        <li>
+        <img src="img (4).jpg" alt="picture" width="264" height="260">
+        <h3>Camila Garcia</h3>
+        <p>Marketing</p>
+        </li>
+        <li>
+        <img src="img (3).jpg" alt="picture" width="264" height="260">
+        <h3>Daniel Wilson</h3>
+        <p>UI Designer</p>
+        </li>
+        </ul>
+    </main>
+    <footer>
+    <a href="">WEBSTUDIO</a>
+    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>  
 </body>
 </html>
