--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 <body>
     <header>
         <nav>
-        <a href="">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
+            <address>
             <li><a href="">Studio</a></li>
             <li><a href="">Portfolio</a></li>
             <li><a href="">Contacs</a></li>
+            </address>
         </ul>
         </nav>
         <ul>
@@ -23,6 +25,7 @@
         <button>Order Service</button>
     </header>
     <main>
+        <section>
         <ul>
             <li>
         <h2>Strategy</h2>
@@ -41,6 +44,8 @@
         <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
         </ul>
+        </section>
+        <section>
         <ul>
             <li>
         <h2>Our Team</h2>
@@ -64,9 +69,10 @@
         <p>UI Designer</p>
         </li>
         </ul>
+        </section>
     </main>
     <footer>
-    <a href="">WEBSTUDIO</a>
+    <a href="./index.html">WebStudio</a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>  
 </body>
