--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
         <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-            <address>
-            <li><a href="">Studio</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Contacs</a></li>
-            </address>
+            <li><a href="./index.html">Studio</a></li>
+            <li><a href="./index.html">Portfolio</a></li>
+            <li><a href="./index.html">Contacs</a></li>
         </ul>
         </nav>
         <ul>
-            <li><a href="mailto:info@devstudio.com" target="_blank" rel="noopener noreferrer">info@devstudio.com</a></li>
-            <li><a href="tel:+11(000)111-11-11" target="_blank" rel="noopener noreferrer">+11(000)111-11-11</a></li>
+            <address>
+            <li><a href="mailto:info@devstudio.com" target="_blank">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111" target="_blank">+110001111111</a></li>
+            </address>
         </ul>
         <h1>Effective Solutions for Your Business</h1>
         <button>Order Service</button>
