--- a/index.html
+++ b/index.html
@@ -52,22 +52,22 @@
         <ul>
             <li>
         <h2>Our Team</h2>
-        <img src="img.jpg" alt="picture" width="264">
+        <img src="./img.jpg" alt="picture" width="264">
         <h2>Mark Guerrero</h2>
         <p>Product Designer</p>
         </li>
         <li>
-         <img src="img1.jpg" alt="picture" width="264">
+         <img src="./img1.jpg" alt="picture" width="264">
          <h3>Tom Ford</h3>
          <p>Frontend Developer</p>
         </li>
         <li>
-        <img src="img4.jpg" alt="picture" width="264">
+        <img src="./img4.jpg" alt="picture" width="264">
         <h2>Camila Garcia</h2>
         <p>Marketing</p>
         </li>
         <li>
-        <img src="img3.jpg" alt="picture" width="264">
+        <img src="./img3.jpg" alt="picture" width="264">
         <h2>Daniel Wilson</h2>
         <p>UI Designer</p>
         </li>
