--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <nav>
         <a class="header-logo" href="./index.html"
-          ><span class="header-logo-color">Web</span>studio</a
+          >Web<span class="header-logo-color">studio</span></a
         >
         <ul class="header-list">
           <li><a href="./index.html">Studio</a></li>
@@ -47,28 +47,28 @@
         <ul>
           <li>
             <h3 class="list-features">Strategy</h3>
-            <p text-features>
+            <p class="text-features">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
             <h3 class="list-features">Punctuality</h3>
-            <p text-features>
+            <p class="text-features">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3 class="list-features">Diligence</h3>
-            <p text-features>
+            <p class="text-features">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3 class="list-features">Technologies</h3>
-            <p text-features>
+            <p class="text-features">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -136,7 +136,7 @@
     </main>
     <footer class="footer">
       <a class="footer-logo" href="./index.html"
-        ><span class="header-logo-color">Web</span>Studio</a
+        >Web<span class="footer-logo-color">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
