--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
             <p class="team-descr">UI Designer</p>
           </li>
         </ul>
+      </section>
+      <section>
         <h2 class="portfolio">Our Portfolio</h2>
         <ul>
           <li>
