--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="section-team">
         <h2 class="second-title">Our Team</h2>
         <ul>
           <li>
