--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <section class="section-team">
         <h2 class="second-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="worker">
             <img src="./images/img.jpg" alt="picture" width="264" />
             <h3 class="team-names">Mark Guerrero</h3>
             <p class="team-descr">Product Designer</p>
