--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
             <h3 class="team-names">Mark Guerrero</h3>
             <p class="team-descr">Product Designer</p>
           </li>
-          <li>
+          <li class="worker">
             <img src="./images/img1.jpg" alt="picture" width="264" />
             <h3 class="team-names">Tom Ford</h3>
             <p class="team-descr">Frontend Developer</p>
           </li>
-          <li>
+          <li class="worker">
             <img src="./images/img4.jpg" alt="picture" width="264" />
             <h3 class="team-names">Camila Garcia</h3>
             <p class="team-descr">Marketing</p>
           </li>
-          <li>
+          <li class="worker">
             <img src="./images/img3.jpg" alt="picture" width="264" />
             <h3 class="team-names">Daniel Wilson</h3>
             <p class="team-descr">UI Designer</p>
