--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <header>
       <nav>
         <a class="header-logo" href="./index.html"
-          >Web<span class="header-logo-color">studio</span></a
+          >Web<span class="header-logo-color">Studio</span></a
         >
         <ul class="header-list">
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./index.html">Portfolio</a></li>
-          <li><a href="./index.html">Contacts</a></li>
+          <li><a class="list-item" href="./index.html">Studio</a></li>
+          <li><a class="list-item" href="./index.html">Portfolio</a></li>
+          <li><a class="list-item" href="./index.html">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul class="header-contacts">
           <li>
             <a href="mailto:info@devstudio.com" target="_blank"
