--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
       <address class="address">
         <ul class="header-contacts">
           <li>
-            <a href="mailto:info@devstudio.com" target="_blank"
+            <a class="contacts" href="mailto:info@devstudio.com" target="_blank"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" target="_blank">+11 (000) 111-11-11</a>
+            <a class="contacts" href="tel:+110001111111" target="_blank"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
