--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         >
         <ul class="header-list">
           <li><a class="list-item" href="./index.html">Studio</a></li>
-          <li><a class="list-item" href="./index.html">Portfolio</a></li>
-          <li><a class="list-item" href="./index.html">Contacts</a></li>
+          <li><a class="list-item" href="">Portfolio</a></li>
+          <li><a class="list-item" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
