--- a/index.html
+++ b/index.html
@@ -11,42 +11,56 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <header>
-      <nav>
-        <a class="header-logo" href="./index.html"
-          >Web<span class="header-logo-color">Studio</span></a
-        >
-        <ul class="header-list">
-          <li><a class="list-item" href="./index.html">Studio</a></li>
-          <li><a class="list-item" href="">Portfolio</a></li>
-          <li><a class="list-item" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="header-contacts">
-          <li>
-            <a class="contacts" href="mailto:info@devstudio.com" target="_blank"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="contacts" href="tel:+110001111111" target="_blank"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container-header">
+        <nav class="header-navigation">
+          <a class="header-logo" href="./index.html"
+            >Web<span class="header-logo-color">Studio</span></a
+          >
+          <ul class="header-list">
+            <li><a class="list-item" href="./index.html">Studio</a></li>
+            <li><a class="list-item" href="">Portfolio</a></li>
+            <li><a class="list-item" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="header-contacts">
+            <li>
+              <a
+                class="contacts"
+                href="mailto:info@devstudio.com"
+                target="_blank"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contacts" href="tel:+110001111111" target="_blank"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
-      <section class="main-section">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="main-button">Order Service</button>
-      </section>
+      <div class="main-container">
+        <section class="main-section">
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="main-button">Order Service</button>
+        </section>
+      </div>
       <section>
         <h2 hidden>Features</h2>
-        <ul>
+        <ul class="features">
           <li>
             <h3 class="list-features">Strategy</h3>
             <p class="text-features">
@@ -77,34 +91,56 @@
           </li>
         </ul>
       </section>
-      <section class="section-team">
-        <h2 class="second-title">Our Team</h2>
-        <ul>
-          <li class="worker">
-            <img src="./images/img.jpg" alt="picture" width="264" />
-            <h3 class="team-names">Mark Guerrero</h3>
-            <p class="team-descr">Product Designer</p>
-          </li>
-          <li class="worker">
-            <img src="./images/img1.jpg" alt="picture" width="264" />
-            <h3 class="team-names">Tom Ford</h3>
-            <p class="team-descr">Frontend Developer</p>
-          </li>
-          <li class="worker">
-            <img src="./images/img4.jpg" alt="picture" width="264" />
-            <h3 class="team-names">Camila Garcia</h3>
-            <p class="team-descr">Marketing</p>
-          </li>
-          <li class="worker">
-            <img src="./images/img3.jpg" alt="picture" width="264" />
-            <h3 class="team-names">Daniel Wilson</h3>
-            <p class="team-descr">UI Designer</p>
-          </li>
-        </ul>
-      </section>
+      <div class="container-team">
+        <section class="section-team">
+          <h2 class="second-title">Our Team</h2>
+          <ul class="worker-list">
+            <li class="worker">
+              <img
+                class="photo"
+                src="./images/img.jpg"
+                alt="picture"
+                width="264"
+              />
+              <h3 class="team-names">Mark Guerrero</h3>
+              <p class="team-descr">Product Designer</p>
+            </li>
+            <li class="worker">
+              <img
+                class="photo"
+                src="./images/img1.jpg"
+                alt="picture"
+                width="264"
+              />
+              <h3 class="team-names">Tom Ford</h3>
+              <p class="team-descr">Frontend Developer</p>
+            </li>
+            <li class="worker">
+              <img
+                class="photo"
+                src="./images/img4.jpg"
+                alt="picture"
+                width="264"
+              />
+              <h3 class="team-names">Camila Garcia</h3>
+              <p class="team-descr">Marketing</p>
+            </li>
+            <li class="worker">
+              <img
+                class="photo"
+                src="./images/img3.jpg"
+                alt="picture"
+                width="264"
+              />
+              <h3 class="team-names">Daniel Wilson</h3>
+              <p class="team-descr">UI Designer</p>
+            </li>
+          </ul>
+        </section>
+      </div>
       <section>
         <h2 class="portfolio">Our Portfolio</h2>
-        <ul>
+        <ul class="portfolio-list">
           <li>
             <img src="./images/img5.jpg" alt="picture" width="360" />
             <h3 class="portfolio-items">Banking App</h3>
@@ -139,13 +175,15 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"
-        >Web<span class="footer-logo-color">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="footer-container">
+        <a class="footer-logo" href="./index.html"
+          >Web<span class="footer-logo-color">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
