--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:wght@500&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
       integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="container-header">
         <nav class="header-navigation">
           <a class="header-logo" href="./index.html"
@@ -58,39 +58,41 @@
           <button type="button" class="main-button">Order Service</button>
         </section>
       </div>
-      <section>
-        <h2 hidden>Features</h2>
-        <ul class="features">
-          <li>
-            <h3 class="list-features">Strategy</h3>
-            <p class="text-features">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="list-features">Punctuality</h3>
-            <p class="text-features">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="list-features">Diligence</h3>
-            <p class="text-features">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="list-features">Technologies</h3>
-            <p class="text-features">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </section>
+      <div class="container-features">
+        <section class="features-section">
+          <h2 hidden>Features</h2>
+          <ul class="features">
+            <li>
+              <h3 class="list-features">Strategy</h3>
+              <p class="text-features">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="list-features">Punctuality</h3>
+              <p class="text-features">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="list-features">Diligence</h3>
+              <p class="text-features">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="list-features">Technologies</h3>
+              <p class="text-features">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </section>
+      </div>
       <div class="container-team">
         <section class="section-team">
           <h2 class="second-title">Our Team</h2>
@@ -138,41 +140,43 @@
           </ul>
         </section>
       </div>
-      <section>
-        <h2 class="portfolio">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li>
-            <img src="./images/img5.jpg" alt="picture" width="360" />
-            <h3 class="portfolio-items">Banking App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li>
-            <img src="./images/img6.jpg" alt="picture" width="360" />
-            <h3 class="portfolio-items">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/img7.jpg" alt="picture" width="360" />
-            <h3 class="portfolio-items">Meditation App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li>
-            <img src="./images/img8.jpg" alt="picture" width="360" />
-            <h3 class="portfolio-items">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/img10.jpg" alt="picture" width="360" />
-            <h3 class="portfolio-items">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
-          </li>
-          <li>
-            <img src="./images/img11.jpg" alt="picture" width="360" />
-            <h3 class="portfolio-items">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-        </ul>
-      </section>
+      <div class="portfolio-container">
+        <section class="portfolio-section">
+          <h2 class="portfolio">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li>
+              <img src="./images/img5.jpg" alt="picture" width="360" />
+              <h3 class="portfolio-items">Banking App</h3>
+              <p class="portfolio-text">App</p>
+            </li>
+            <li>
+              <img src="./images/img6.jpg" alt="picture" width="360" />
+              <h3 class="portfolio-items">Cashless Payment</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+            <li>
+              <img src="./images/img7.jpg" alt="picture" width="360" />
+              <h3 class="portfolio-items">Meditation App</h3>
+              <p class="portfolio-text">App</p>
+            </li>
+            <li>
+              <img src="./images/img8.jpg" alt="picture" width="360" />
+              <h3 class="portfolio-items">Taxi Service</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+            <li>
+              <img src="./images/img10.jpg" alt="picture" width="360" />
+              <h3 class="portfolio-items">Screen Illustrations</h3>
+              <p class="portfolio-text">Design</p>
+            </li>
+            <li>
+              <img src="./images/img11.jpg" alt="picture" width="360" />
+              <h3 class="portfolio-items">Online Courses</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
     <footer class="footer">
       <div class="footer-container">
