--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container-header">
+      <div class="container header-container">
         <nav class="header-navigation">
           <a class="header-logo" href="./index.html"
             >Web<span class="header-logo-color">Studio</span></a
@@ -52,13 +52,13 @@
       </div>
     </header>
     <main>
-      <div class="main-container">
+      <div class="container main-container">
         <section class="main-section">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button type="button" class="main-button">Order Service</button>
         </section>
       </div>
-      <div class="container-features">
+      <div class="container container-features">
         <section class="features-section">
           <h2 hidden>Features</h2>
           <ul class="features">
@@ -93,7 +93,7 @@
           </ul>
         </section>
       </div>
-      <div class="container-team">
+      <div class="container container-team">
         <section class="section-team">
           <h2 class="second-title">Our Team</h2>
           <ul class="worker-list">
@@ -140,7 +140,7 @@
           </ul>
         </section>
       </div>
-      <div class="portfolio-container">
+      <div class="container portfolio-container">
         <section class="portfolio-section">
           <h2 class="portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
