--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
     </header>
     <main>
       <div class="container main-container">
-        <section class="main-section">
+        <section class="our-main-section">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button type="button" class="main-button">Order Service</button>
         </section>
       </div>
       <div class="container container-features">
-        <section class="features-section">
-          <h2 hidden>Features</h2>
+        <section class="our-features-section">
+          <h2 class="visually-hidden">Features</h2>
           <ul class="features">
             <li>
               <h3 class="list-features">Strategy</h3>
@@ -94,7 +94,7 @@
         </section>
       </div>
       <div class="container container-team">
-        <section class="section-team">
+        <section class="our-section-team">
           <h2 class="second-title">Our Team</h2>
           <ul class="worker-list">
             <li class="worker">
@@ -141,7 +141,7 @@
         </section>
       </div>
       <div class="container portfolio-container">
-        <section class="portfolio-section">
+        <section class="our-portfolio-section">
           <h2 class="portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li>
