--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
       </div>
     </header>
     <main>
-      <div class="container main-container">
-        <section class="our-main-section">
+      <section class="our-main-section">
+        <div class="container div-main-container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button type="button" class="main-button">Order Service</button>
-        </section>
-      </div>
-      <div class="container container-features">
-        <section class="our-features-section">
+        </div>
+      </section>
+      <section class="our-features-section">
+        <div class="container div-container-features">
           <h2 class="visually-hidden">Features</h2>
           <ul class="features">
             <li>
@@ -91,10 +91,10 @@
               </p>
             </li>
           </ul>
-        </section>
-      </div>
-      <div class="container container-team">
-        <section class="our-section-team">
+        </div>
+      </section>
+      <section class="our-section-team">
+        <div class="container div-container-team">
           <h2 class="second-title">Our Team</h2>
           <ul class="worker-list">
             <li class="worker">
@@ -138,10 +138,10 @@
               <p class="team-descr">UI Designer</p>
             </li>
           </ul>
-        </section>
-      </div>
-      <div class="container portfolio-container">
-        <section class="our-portfolio-section">
+        </div>
+      </section>
+      <section class="our-portfolio-section">
+        <div class="container div-portfolio-container">
           <h2 class="portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li>
@@ -175,8 +175,8 @@
               <p class="portfolio-text">Marketing</p>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer-container">
