--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </section>
       <section class="our-section-team">
         <div class="container div-container-team">
-          <h2 class="second-title">Our Team</h2>
+          <h2 class="our-second-title">Our Team</h2>
           <ul class="worker-list">
             <li class="worker">
               <img
