--- a/index.html
+++ b/index.html
@@ -144,36 +144,48 @@
         <div class="container div-portfolio-container">
           <h2 class="portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li>
-              <img src="./images/img5.jpg" alt="picture" width="360" />
-              <h3 class="portfolio-items">Banking App</h3>
-              <p class="portfolio-text">App</p>
-            </li>
-            <li>
-              <img src="./images/img6.jpg" alt="picture" width="360" />
-              <h3 class="portfolio-items">Cashless Payment</h3>
-              <p class="portfolio-text">Marketing</p>
-            </li>
-            <li>
-              <img src="./images/img7.jpg" alt="picture" width="360" />
-              <h3 class="portfolio-items">Meditation App</h3>
-              <p class="portfolio-text">App</p>
-            </li>
-            <li>
-              <img src="./images/img8.jpg" alt="picture" width="360" />
-              <h3 class="portfolio-items">Taxi Service</h3>
-              <p class="portfolio-text">Marketing</p>
-            </li>
-            <li>
-              <img src="./images/img10.jpg" alt="picture" width="360" />
-              <h3 class="portfolio-items">Screen Illustrations</h3>
-              <p class="portfolio-text">Design</p>
-            </li>
-            <li>
-              <img src="./images/img11.jpg" alt="picture" width="360" />
-              <h3 class="portfolio-items">Online Courses</h3>
-              <p class="portfolio-text">Marketing</p>
-            </li>
+            <div class="div-list-item">
+              <li class="first-item-list">
+                <img src="./images/img5.jpg" alt="picture" width="360" />
+                <h3 class="portfolio-items">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </li>
+            </div>
+            <div class="div-list-item">
+              <li class="first-item-list">
+                <img src="./images/img6.jpg" alt="picture" width="360" />
+                <h3 class="portfolio-items">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </li>
+            </div>
+            <div class="div-list-item">
+              <li class="first-item-list">
+                <img src="./images/img7.jpg" alt="picture" width="360" />
+                <h3 class="portfolio-items">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </li>
+            </div>
+            <div class="div-list-item">
+              <li class="first-item-list">
+                <img src="./images/img8.jpg" alt="picture" width="360" />
+                <h3 class="portfolio-items">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </li>
+            </div>
+            <div class="div-list-item">
+              <li class="first-item-list">
+                <img src="./images/img10.jpg" alt="picture" width="360" />
+                <h3 class="portfolio-items">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </li>
+            </div>
+            <div class="div-list-item">
+              <li class="first-item-list">
+                <img src="./images/img11.jpg" alt="picture" width="360" />
+                <h3 class="portfolio-items">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </li>
+            </div>
           </ul>
         </div>
       </section>
