--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer-container">
+      <div class="container our-footer-container">
         <a class="footer-logo" href="./index.html"
           >Web<span class="footer-logo-color">Studio</span></a
         >
