--- a/index.html
+++ b/index.html
@@ -96,48 +96,50 @@
       <section class="our-section-team">
         <div class="container div-container-team">
           <h2 class="our-second-title">Our Team</h2>
-          <ul class="worker-list">
-            <li class="worker">
-              <img
-                class="photo"
-                src="./images/img.jpg"
-                alt="picture"
-                width="264"
-              />
-              <h3 class="team-names">Mark Guerrero</h3>
-              <p class="team-descr">Product Designer</p>
-            </li>
-            <li class="worker">
-              <img
-                class="photo"
-                src="./images/img1.jpg"
-                alt="picture"
-                width="264"
-              />
-              <h3 class="team-names">Tom Ford</h3>
-              <p class="team-descr">Frontend Developer</p>
-            </li>
-            <li class="worker">
-              <img
-                class="photo"
-                src="./images/img4.jpg"
-                alt="picture"
-                width="264"
-              />
-              <h3 class="team-names">Camila Garcia</h3>
-              <p class="team-descr">Marketing</p>
-            </li>
-            <li class="worker">
-              <img
-                class="photo"
-                src="./images/img3.jpg"
-                alt="picture"
-                width="264"
-              />
-              <h3 class="team-names">Daniel Wilson</h3>
-              <p class="team-descr">UI Designer</p>
-            </li>
-          </ul>
+          <div class="container div-worker-list">
+            <ul class="worker-list">
+              <li class="worker">
+                <img
+                  class="photo"
+                  src="./images/img.jpg"
+                  alt="picture"
+                  width="264"
+                />
+                <h3 class="our-team-names">Mark Guerrero</h3>
+                <p class="team-descr">Product Designer</p>
+              </li>
+              <li class="worker">
+                <img
+                  class="photo"
+                  src="./images/img1.jpg"
+                  alt="picture"
+                  width="264"
+                />
+                <h3 class="our-team-names">Tom Ford</h3>
+                <p class="team-descr">Frontend Developer</p>
+              </li>
+              <li class="worker">
+                <img
+                  class="photo"
+                  src="./images/img4.jpg"
+                  alt="picture"
+                  width="264"
+                />
+                <h3 class="our-team-names">Camila Garcia</h3>
+                <p class="team-descr">Marketing</p>
+              </li>
+              <li class="worker">
+                <img
+                  class="photo"
+                  src="./images/img3.jpg"
+                  alt="picture"
+                  width="264"
+                />
+                <h3 class="our-team-names">Daniel Wilson</h3>
+                <p class="team-descr">UI Designer</p>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
       <section class="our-portfolio-section">
