--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="container div-container-team">
           <h2 class="our-second-title">Our Team</h2>
           <ul class="worker-list">
-            <li class="worker">
+            <li class="worker-item">
               <img
                 class="photo"
                 src="./images/img.jpg"
@@ -107,7 +107,7 @@
               <h3 class="our-team-names">Mark Guerrero</h3>
               <p class="team-descr">Product Designer</p>
             </li>
-            <li class="worker">
+            <li class="worker-item">
               <img
                 class="photo"
                 src="./images/img1.jpg"
@@ -117,7 +117,7 @@
               <h3 class="our-team-names">Tom Ford</h3>
               <p class="team-descr">Frontend Developer</p>
             </li>
-            <li class="worker">
+            <li class="worker-item">
               <img
                 class="photo"
                 src="./images/img4.jpg"
@@ -127,7 +127,7 @@
               <h3 class="our-team-names">Camila Garcia</h3>
               <p class="team-descr">Marketing</p>
             </li>
-            <li class="worker">
+            <li class="worker-item">
               <img
                 class="photo"
                 src="./images/img3.jpg"
