--- a/index.html
+++ b/index.html
@@ -154,33 +154,45 @@
           <ul class="portfolio-list">
             <li class="first-item-list">
               <img src="./images/img5.jpg" alt="picture" width="360" />
-              <h3 class="portfolio-items">Banking App</h3>
-              <p class="portfolio-text">App</p>
+              <div class="div-portfolio-item">
+                <h3 class="portfolio-items">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
             </li>
             <li class="first-item-list">
               <img src="./images/img6.jpg" alt="picture" width="360" />
-              <h3 class="portfolio-items">Cashless Payment</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="div-portfolio-item">
+                <h3 class="portfolio-items">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
             <li class="first-item-list">
               <img src="./images/img7.jpg" alt="picture" width="360" />
-              <h3 class="portfolio-items">Meditation App</h3>
-              <p class="portfolio-text">App</p>
+              <div class="div-portfolio-item">
+                <h3 class="portfolio-items">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
             </li>
             <li class="first-item-list">
               <img src="./images/img8.jpg" alt="picture" width="360" />
-              <h3 class="portfolio-items">Taxi Service</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="div-portfolio-item">
+                <h3 class="portfolio-items">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
             <li class="first-item-list">
               <img src="./images/img10.jpg" alt="picture" width="360" />
-              <h3 class="portfolio-items">Screen Illustrations</h3>
-              <p class="portfolio-text">Design</p>
+              <div class="div-portfolio-item">
+                <h3 class="portfolio-items">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </div>
             </li>
             <li class="first-item-list">
               <img src="./images/img11.jpg" alt="picture" width="360" />
-              <h3 class="portfolio-items">Online Courses</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="div-portfolio-item">
+                <h3 class="portfolio-items">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
