--- a/index.html
+++ b/index.html
@@ -62,28 +62,28 @@
         <div class="container div-container-features">
           <h2 class="visually-hidden">Features</h2>
           <ul class="features">
-            <li>
+            <li class="features-list-item">
               <h3 class="list-features">Strategy</h3>
               <p class="text-features">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="features-list-item">
               <h3 class="list-features">Punctuality</h3>
               <p class="text-features">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="features-list-item">
               <h3 class="list-features">Diligence</h3>
               <p class="text-features">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="features-list-item">
               <h3 class="list-features">Technologies</h3>
               <p class="text-features">
                 Design practice focused on digital experiences. We bring forth a
