--- a/index.html
+++ b/index.html
@@ -293,14 +293,21 @@
           <h2 class="portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="first-item-list">
-              <img src="./images/img5.jpg" alt="picture" width="360" />
+              <div class="div-portfolio-text">
+                <img src="./images/img5.jpg" alt="picture" width="360" />
+                <p class="portfolio-list-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="div-portfolio-item">
                 <h3 class="portfolio-items">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="first-item-list">
-              <div class="div-portfolio">
+              <div class="div-portfolio-text">
                 <img src="./images/img6.jpg" alt="picture" width="360" />
                 <p class="portfolio-list-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -314,28 +321,56 @@
               </div>
             </li>
             <li class="first-item-list">
-              <img src="./images/img7.jpg" alt="picture" width="360" />
+              <div class="div-portfolio-text">
+                <img src="./images/img7.jpg" alt="picture" width="360" />
+                <p class="portfolio-list-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="div-portfolio-item">
                 <h3 class="portfolio-items">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="first-item-list">
-              <img src="./images/img8.jpg" alt="picture" width="360" />
+              <div class="div-portfolio-text">
+                <img src="./images/img8.jpg" alt="picture" width="360" />
+                <p class="portfolio-list-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="div-portfolio-item">
                 <h3 class="portfolio-items">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="first-item-list">
-              <img src="./images/img10.jpg" alt="picture" width="360" />
+              <div class="div-portfolio-text">
+                <img src="./images/img10.jpg" alt="picture" width="360" />
+                <p class="portfolio-list-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="div-portfolio-item">
                 <h3 class="portfolio-items">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="first-item-list">
-              <img src="./images/img11.jpg" alt="picture" width="360" />
+              <div class="div-portfolio-text">
+                <img src="./images/img11.jpg" alt="picture" width="360" />
+                <p class="portfolio-list-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="div-portfolio-item">
                 <h3 class="portfolio-items">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
