--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
         </div>
         <div class="div-footer">
           <p class="footer-text">Social media</p>
-          <ul class="icon-list">
+          <ul class="icon-list-footer">
             <li class="icon-item">
               <a href="" target="_blank" class="footer-icon">
                 <svg class="icon-app" width="24" height="24">
