--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
     </main>
     <footer class="footer">
       <div class="container-div">
-        <div class="our-footer-container">
+        <div class="container our-footer-container">
           <a class="footer-logo" href="./index.html"
             >Web<span class="footer-logo-color">Studio</span></a
           >
