--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
           </p>
         </div>
         <div class="div-footer">
-          <p class="footer-text">Social media</p>
+          <p class="footer-text-social">Social media</p>
           <ul class="icon-list-footer">
             <li class="icon-item">
               <a href="" target="_blank" class="footer-icon">
