--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <section class="main-section">
         <div class="container div-main-container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="main-button">Order Service</button>
+          <button type="button" class="main-button" data-modal-open>Order Service</button>
         </div>
       </section>
       <section class="our-features-section">
@@ -424,11 +424,20 @@
             </li>
           </ul>
         </div>
+          <div class="footer-form-div">
+          <label class="form-name" for="user-email">Subscribe</label>
+              <input type="email" class="footer-form" id="user-email" placeholder="E-mail">
+              <button type="button" class="footer-button">Subscribe <svg class="icon-send" width="24" height="20">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+                </svg>
+              </button>
+          </div>
+        </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <div class="backdrop is-open" data-modal>
       <div class="modal">
-        <button type="button" class="modal-close-button">
+        <button type="button" class="modal-close-button" data-modal-close>
           <svg class="icon-close" width="8px" height="8px">
             <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
           </svg>
@@ -446,7 +455,7 @@
             <div class="form-div">
               <label class="modal-name" for="user-number">Phone</label>
               <div class="modal-input-div">
-                <input type="text" class="modal-input" id="user-number" required />
+                <input type="tel" class="modal-input" id="user-number" required />
                 <svg width="18" height="24" class="modal-icon">
                   <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
@@ -454,7 +463,7 @@
               <div class="form-div">
                 <label class="modal-name" for="user-email">Email</label>
                 <div class="modal-input-div">
-                  <input type="text" class="modal-input" id="user-email" required />
+                  <input type="email" class="modal-input" id="user-email" required />
                   <svg width="18" height="24" class="modal-icon">
                     <use href="./images/icons.svg#icon-Vector-1"></use>
                   </svg>
@@ -468,15 +477,17 @@
             <input type="checkbox" id="user-checkbox" class="input-checkbox">
             <label for="user-checkbox" class="label-checkbox">
               <span class="custom-checkbox">
-                <svg class="svg-checkbox" width="16px" height="16px">
+                <svg class="svg-checkbox" width="16" height="16">
                   <use href="./images/icons.svg#icon-Vector-2"></use>
                 </svg>
-              I accept the terms and conditions of the <a href="" class="text-link">Privacy Policy</a></p>
+              <p>I accept the terms and conditions of the <a href="" class="text-link">Privacy Policy</a></p>
               </span>
             </label>
+            <button type="button" class="form-button">Send</button>
           </div>
         </form>
       </div>
     </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
