--- a/index.html
+++ b/index.html
@@ -424,9 +424,12 @@
             </li>
           </ul>
         </div>
+        <form>
           <div class="footer-form-div">
-          <label class="form-name" for="user-email">Subscribe</label>
+          <label class="form-name" for="user-email"></label>
+          <p class="form-text">Subscribe</p>
               <input type="email" class="footer-form" id="user-email" placeholder="E-mail">
+        </form>
               <button type="button" class="footer-button">Subscribe <svg class="icon-send" width="24" height="20">
                 <use href="./images/icons.svg#icon-icon-send"></use>
                 </svg>
