--- a/index.html
+++ b/index.html
@@ -426,9 +426,11 @@
         </div>
           <div class="footer-form-div">
             <p class="form-text">Subscribe</p>
-          <label class="form-name" for="user-email"></label>
+            <form class="footer-email-form">
+          <label class="footer-form-name" for="user-email"></label>
               <input type="email" class="footer-form" id="user-email" placeholder="E-mail">
-              <button type="button" class="footer-button">Subscribe <svg class="icon-send" width="24" height="20">
+            </form>
+              <button type="button" class="footer-button-div">Subscribe <svg class="icon-send" width="24" height="20">
                 <use href="./images/icons.svg#icon-icon-send"></use>
                 </svg>
               </button>
