--- a/index.html
+++ b/index.html
@@ -428,13 +428,13 @@
             <p class="form-text">Subscribe</p>
             <form class="footer-email-form">
           <label class="footer-form-name" for="user-email">
-              <input type="email" class="footer-form" id="user-email" placeholder="E-mail">
+              <input type="email" name="user-email" class="footer-form" id="user-email" placeholder="E-mail">
           </label>
-            </form>
               <button type="button" class="footer-button-div">Subscribe <svg class="icon-send" width="24" height="20">
                 <use href="./images/icons.svg#icon-icon-send"></use>
                 </svg>
               </button>
+             </form>
           </div>
         </div>
       </div>
