--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
           <label class="footer-form-name" for="user-email">
               <input type="email" name="user-email" class="footer-form" id="user-email" placeholder="E-mail">
           </label>
-              <button type="button" class="footer-button-div">Subscribe <svg class="icon-send" width="24" height="20">
+              <button type="submit" class="footer-button-div">Subscribe <svg class="icon-send" width="24" height="24">
                 <use href="./images/icons.svg#icon-icon-send"></use>
                 </svg>
               </button>
