--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container-div">
+      <div class="container-div container">
         <div class="our-footer-container">
           <a class="footer-logo" href="./index.html"
             >Web<span class="footer-logo-color">Studio</span></a
