--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
     <div class="backdrop is-open" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-button" data-modal-close>
-          <svg class="icon-close" width="8px" height="8px">
+          <svg class="icon-close-button" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
           </svg>
         </button>
