--- a/index.html
+++ b/index.html
@@ -490,6 +490,7 @@
                 </svg>
               </span>
               </div>
+              </div>
             </label>
             <button type="submit" class="form-button-div">Send</button>
           </div>
