--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                 </div>
           </div>
           <div class="form-text-div">
-            <label class="form-text-label" for="user-comment">Comment</label>
+            <label class="modal-name" for="user-comment">Comment</label>
             <textarea class="modal-text-comment" name="user-comment" id="user-comment" placeholder="Text input" required></textarea>
           </div>
           <div class="checkbox-div">
