--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                 type="email"
                 name="user-email"
                 class="footer-form"
-                id="user-email"
+                id="user-email-two"
                 placeholder="E-mail"
               />
             </label>
