--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         <div class="footer-form-div">
           <p class="form-text">Subscribe</p>
           <form class="footer-email-form">
-            <label class="footer-form-name" for="user-email">
+            <label class="footer-form-name" for="user-email-two">
               <input
                 type="email"
                 name="user-email"
