--- a/index.html
+++ b/index.html
@@ -371,7 +371,12 @@
           <ul class="portfolio-list">
             <li class="first-item-list">
               <div class="div-portfolio-text">
-                <img src="./images/img5.jpg" alt="picture" width="360" />
+                <img
+                  srcset="./images/img5.jpg 1x, ./images/img5@2x.jpg 2x"
+                  src="./images/img5.jpg"
+                  alt="picture"
+                  width="360"
+                />
                 <p class="portfolio-list-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -385,7 +390,12 @@
             </li>
             <li class="first-item-list">
               <div class="div-portfolio-text">
-                <img src="./images/img6.jpg" alt="picture" width="360" />
+                <img
+                  srcset="./images/img6.jpg 1x, ./images/img6@2x.jpg 2x"
+                  src="./images/img6.jpg"
+                  alt="picture"
+                  width="360"
+                />
                 <p class="portfolio-list-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -399,7 +409,12 @@
             </li>
             <li class="first-item-list">
               <div class="div-portfolio-text">
-                <img src="./images/img7.jpg" alt="picture" width="360" />
+                <img
+                  srcset="./images/img7.jpg 1x, ./images/img7@2x.jpg 2x"
+                  src="./images/img7.jpg"
+                  alt="picture"
+                  width="360"
+                />
                 <p class="portfolio-list-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -413,7 +428,12 @@
             </li>
             <li class="first-item-list">
               <div class="div-portfolio-text">
-                <img src="./images/img8.jpg" alt="picture" width="360" />
+                <img
+                  srcset="./images/img8.jpg 1x, ./images/img8@2x.jpg 2x"
+                  src="./images/img8.jpg"
+                  alt="picture"
+                  width="360"
+                />
                 <p class="portfolio-list-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -427,7 +447,12 @@
             </li>
             <li class="first-item-list">
               <div class="div-portfolio-text">
-                <img src="./images/img10.jpg" alt="picture" width="360" />
+                <img
+                  srcset="./images/img10.jpg 1x, ./images/img10@2x.jpg 2x"
+                  src="./images/img10.jpg"
+                  alt="picture"
+                  width="360"
+                />
                 <p class="portfolio-list-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -441,7 +466,12 @@
             </li>
             <li class="first-item-list">
               <div class="div-portfolio-text">
-                <img src="./images/img11.jpg" alt="picture" width="360" />
+                <img
+                  srcset="./images/img11.jpg 1x, ./images/img11@2x.jpg 2x"
+                  src="./images/img11.jpg"
+                  alt="picture"
+                  width="360"
+                />
                 <p class="portfolio-list-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
