--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open" data-modal>
+    <div class="backdrop" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-button" data-modal-close>
           <svg class="icon-close-button" width="8" height="8">
